--- a/package/lean/luci-app-flowoffload/po/zh-cn/flowoffload.po
+++ b/package/lean/luci-app-flowoffload/po/zh-cn/flowoffload.po
@@ -25,9 +25,6 @@ msgstr "启用硬件HWNAT加速（依赖特定的硬件，例如 MTK 762x 系列
 msgid "Enable BBR"
 msgstr "启用 BBR"
 
-msgid "TCP Congestion Control Algorithm"
-msgstr "启用TCP通讯拥塞控制"
-
 msgid "Bottleneck Bandwidth and Round-trip propagation time (BBR)"
 msgstr "BBR拥塞控制算法可以加强TCP应用表现，但会降低路由器本机上的WIFI吞吐性能"
 
@@ -67,8 +64,8 @@ msgstr "启用dnsmasq去广告"
 msgid "dnsmasq killqqad"
 msgstr "dnsmasq去广告"
 
-msgid "AdGuardHome After setting up, shut down DNS acceleration normally and save configuration file"
-msgstr "AdGuardHome设置完后正常关闭dns加速即可保存配置文件.AdGuardHome管理页面IP:3000 管理账号密码：AdGuardHome"
+msgid "AdGuardHome's login username/passwd: AdGuardHome, web console addr: IP:3001"
+msgstr "AdGuardHome 网页控制台地址：IP:3001 登录账号/密码：AdGuardHome"
 
 msgid "Filter AAAA"
 msgstr "忽略域名的IPv6地址"
