--- a/package/hong/luci-app-clash/po/zh-cn/clash.po
+++ b/package/hong/luci-app-clash/po/zh-cn/clash.po
@@ -134,7 +134,7 @@ msgid "App Name"
 msgstr "应用程序名称"
 
 msgid "Rule-based Custom Proxy Client"
-msgstr "基于规则的自定义代理客户端<br>项目地址：https://github.com/frainzy1477/luci-app-clash"
+msgstr "基于规则的自定义代理客户端。项目地址：https://github.com/frainzy1477/luci-app-clash"
 
 msgid "Error Occured | Return"
 msgstr "检查错误 | 返回"
