--- a/package/lean/default-settings/i18n/default.zh-cn.po
+++ b/package/lean/default-settings/i18n/default.zh-cn.po
@@ -129,6 +129,18 @@ msgstr "不支持"
 msgid "CPU Model"
 msgstr "CPU型号"
 
+msgid "AriaNg"
+msgstr "打开AriaNg的Web管理界面"
+
+msgid "WebUI-Aria2"
+msgstr "打开WebUI-Aria2的Web管理界面"
+
+msgid ""
+msgstr ""
+
+msgid "YAAW"
+msgstr "打开YAAW的Web管理界面"
+
 msgid ""
 msgstr ""
 
