--- a/package/hong/luci-app-cpulimit/po/zh-cn/cpulimit.po
+++ b/package/hong/luci-app-cpulimit/po/zh-cn/cpulimit.po
@@ -12,7 +12,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "cpulimit"
-msgstr "CPU占用率限制"
+msgstr "CPU限制"
 
 msgid "Use cpulimit to restrict app's cpu usage."
 msgstr "利用cpulimit限制应用程序的CPU使用率"
