--- a/package/lean/luci-app-vlmcsd/po/zh-cn/vlmcsd.zh-cn.po
+++ b/package/lean/luci-app-vlmcsd/po/zh-cn/vlmcsd.zh-cn.po
@@ -18,7 +18,6 @@ msgstr "基本设置"
 msgid "Config File"
 msgstr "配置文件"
 
-
 msgid "<b><font color=green>Vlmcsd is running.</font></b>"
 msgstr "<b><font color=green>KMS 服务器运行中</font></b>"
 
@@ -31,8 +30,8 @@ msgstr "启用"
 msgid "Auto activate"
 msgstr "自动激活局域网客户端"
 
-msgid "configfile"
-msgstr "配置文件"
-
 msgid "This file is /etc/vlmcsd.ini."
 msgstr "这个文件在 /etc/vlmcsd.ini 下，可以增加新的产品主密钥。"
+
+msgid "A KMS Serever Emulator to active your Windows or Office"
+msgstr "KMS服务器仿真器，用于激活Windows或Office"
