--- a/package/hong/luci-app-appfilter/po/zh-cn/oaf.po
+++ b/package/hong/luci-app-appfilter/po/zh-cn/oaf.po
@@ -42,4 +42,4 @@ msgid "Enable App Filter"
 msgstr "开启应用过滤"
 
 msgid "OpenAppFilter"
-msgstr "通过app过滤进行管控，限制游戏以及某些app上网行为。<br>项目地址：https://github.com/destan19/OpenAppFilter<br>必须关闭各种加速模块，如软加速、硬加速等。<br>模块可能与qos等用到了netfilter mark字段的模块冲突，自行检查。<br>该模块只工作在路由模式，交换机(桥)模式不会生效。"
+msgstr "通过app过滤进行管控，限制游戏以及某些app上网行为。项目地址：https://github.com/destan19/OpenAppFilter<br>必须关闭各种加速模块，如软加速、硬加速等。模块可能与qos等用到了netfilter mark字段的模块冲突，自行检查。<br>该模块只工作在路由模式，交换机(桥)模式不会生效。"
