--- a/package/lean/luci-app-qbittorrent/po/zh-cn/qbittorrent.po
+++ b/package/lean/luci-app-qbittorrent/po/zh-cn/qbittorrent.po
@@ -2,10 +2,10 @@ msgid "qbittorrent"
 msgstr "qBittorrent 下载"
 
 msgid "The qBittorrent service is running."
-msgstr "qBittorrent 服务正在运行"
+msgstr "服务正在运行"
 
 msgid "The qBittorrent service is not running."
-msgstr "qBittorrent 服务未运行"
+msgstr "服务未运行"
 
 msgid "qbittorrent Run Status"
 msgstr "qBittorrent运行状态"
