--- a/package/hong/luci-app-softwarecenter/po/zh-cn/softwarecenter.po
+++ b/package/hong/luci-app-softwarecenter/po/zh-cn/softwarecenter.po
@@ -49,11 +49,8 @@ msgstr "部署Entware软件仓库"
 msgid "This is a software repository for network attached storages, routers and other embedded devices.Browse through 2000+ packages for different platforms."
 msgstr "这是一个用于NAS，路由器和其他嵌入式设备的软件仓库。提供超过2000多个不同平台的软件包。"
 
-msgid "CPU architecture"
-msgstr "CPU架构"
-
-msgid "You must select a right cpu architecture!<br>wrong cpu architecture will cause the installation failed"
-msgstr "您必须选择正确的CPU架构，注意ar系列基本都是mips，mtk的都是mipsel。<br>可用cat /proc/cpuinfo查询。选择错误的会导致Entware软件仓库的部署失败。"
+msgid "Current CPU model"
+msgstr "当前CPU型号："
 
 msgid "Entware install path"
 msgstr "Entware软件仓库安装路径"
