--- a/package/lean/luci-app-qbittorrent/po/zh-cn/qbittorrent.po
+++ b/package/lean/luci-app-qbittorrent/po/zh-cn/qbittorrent.po
@@ -114,10 +114,10 @@ msgid "TCP and UTP"
 msgstr "TCP和UTP"
 
 msgid "Inet Address"
-msgstr "输入地址"
+msgstr "提交的地址"
 
 msgid "The address that respond to the trackers."
-msgstr "响应跟踪器的地址。"
+msgstr "向trackers提交的地址（IP/域名）。"
 
 msgid "When adding seeds"
 msgstr "当添加种子时"
@@ -135,10 +135,10 @@ msgid "Start In Pause"
 msgstr "开始暂停"
 
 msgid "Do not start the download automatically."
-msgstr "在下载任务添加后暂停。"
+msgstr "在下载任务添加后不立即自动下载。"
 
 msgid "Auto Delete Torrent File"
-msgstr "删除种子"
+msgstr "自动删除种子"
 
 msgid "The .torrent files will be deleted afterwards."
 msgstr "下载完成后自动删除这个种子文件。"
@@ -147,7 +147,7 @@ msgid "Pre Allocation"
 msgstr "磁盘预分配"
 
 msgid "Pre-allocate disk space for all files."
-msgstr "为刚添加的文件预先分配磁盘空间。"
+msgstr "为所有文件预分配硬盘空间。"
 
 msgid "Use Incomplete Extension"
 msgstr "使用扩展名"
@@ -225,16 +225,16 @@ msgid "Choose the action when category save path changed."
 msgstr "选择分类保存路径更改时的操作。"
 
 msgid "Torrent Export Dir"
-msgstr "种子导出目录"
+msgstr "未完成种子导出目录"
 
 msgid "The .torrent files will be copied to the target directory."
-msgstr "种子文件将被复制到目标目录。例如：<code>/etc/config</code>"
+msgstr "未完成的种子文件将被复制到目标目录。例如：<code>/etc/config</code>"
 
 msgid "Finished Torrent Export Dir"
-msgstr "复制种子文件"
+msgstr "已完成种子导出目录"
 
 msgid "The .torrent files for finished downloads will be copied to the target directory."
-msgstr "将已下载完成的种子文件复制到目标目录。例如：<code>/etc/config</code>"
+msgstr "已完成的种子文件将被复制到目标目录。例如：<code>/etc/config</code>"
 
 msgid "Bittorrent Settings"
 msgstr "BT设置""
@@ -291,13 +291,13 @@ msgid "The max number of connections per torrent."
 msgstr "每个种子的最大连接数。"
 
 msgid "Max Uploads"
-msgstr "最大上传数"
+msgstr "最大连接数"
 
 msgid "The max number of connected peers."
-msgstr "全局最大上传线程数。"
+msgstr "全局最大连接数。"
 
 msgid "Max Uploads Per Torrent"
-msgstr "种子上传限制"
+msgstr "单种子上传限制"
 
 msgid "The max number of connected peers per torrent."
 msgstr "每个种子上传线程最大值。"
@@ -312,7 +312,7 @@ msgid "The max ratio for seeding. -1 is to disable the seeding."
 msgstr "分享的最大比例设定。-1是禁用做种。"
 
 msgid "Max Seeding Minutes"
-msgstr "最大做种时间"
+msgstr "最大做种时长"
 
 msgid "Units: minutes"
 msgstr "做种最大比例设定。单位：分钟"
@@ -360,7 +360,7 @@ msgid "Units: KiB/s"
 msgstr "单位：KiB/s"
 
 msgid "Torrent inactivity timer"
-msgstr "种子不活动时间"
+msgstr "种子不活动时长"
 
 msgid "Units: seconds"
 msgstr "时间单位：分钟"
@@ -414,10 +414,10 @@ msgid "Force authentication for clients on localhost."
 msgstr "强制对本地主机上的客户端进行身份验证。"
 
 msgid "Enable Subnet Whitelist"
-msgstr "使子网白名单"
+msgstr "启用子网白名单"
 
 msgid "Subnet Whitelist"
-msgstr "输入IP地址"
+msgstr "子网白名单地址"
 
 msgid "Skip authentication for clients in the IP subnet white list."
 msgstr "对IP子网白名单中的客户端跳过身份验证."
@@ -432,13 +432,13 @@ msgid "When enabled, qBittorrent will take certain measures to try"
 msgstr "启用后，qBittorrent将采取某些措施隐藏其身份。"
 
 msgid "Super Seeding"
-msgstr "超级种子"
+msgstr "超级做种模式"
 
 msgid "The super seeding mode."
-msgstr "超级种子模式。"
+msgstr " 启用超级做种模式。"
 
 msgid "Limit Overhead Usage"
-msgstr "开销限制"
+msgstr "总开销限制"
 
 msgid "The overhead usage is been limitted."
 msgstr "对传送总开销进行速度限制。"
@@ -450,31 +450,31 @@ msgid "Ignore the speed limit to LAN."
 msgstr "忽略对LAN的速度限制。"
 
 msgid "Use os Cache"
-msgstr "使用缓存"
+msgstr "使用系统缓存"
 
 msgid ""
 msgstr ""
 
 msgid "Max Outgoing Port"
-msgstr "端口设置"
+msgstr "最大端口"
 
 msgid The max outgoing port.""
-msgstr "最大输出端口。"
+msgstr "最大的对外连接端口。"
 
 msgid "Min Outgoing Port"
-msgstr "端口设置"
+msgstr "最小端口"
 
 msgid "The min outgoing port."
-msgstr "最小输出端口。"
+msgstr "最小的对外连接端口。"
 
 msgid "Choking Algorithm"
-msgstr "数据传输算法"
+msgstr "上传连接策略"
 
 msgid "The strategy of choking algorithm."
-msgstr "数据传输算法的策略。"
+msgstr "上传连接策略"
 
 msgid "Round Robin"
-msgstr "负载均衡"
+msgstr "轮流上传"
 
 msgid "Fastest Upload"
 msgstr "最快上传"
@@ -483,10 +483,10 @@ msgid "Anti-Leech"
 msgstr "反吸血"
 
 msgid "Announce To All Trackers"
-msgstr ""
+msgstr "响应所有Trackers"
 
 msgid "Announce To All Tiers"
-msgstr ""
+msgstr "响应所有层"
 
 msgid "configuration file"
 msgstr "配置文件"
