--- a/package/hong/luci-app-cpulimit/po/zh-cn/cpulimit.po
+++ b/package/hong/luci-app-cpulimit/po/zh-cn/cpulimit.po
@@ -17,7 +17,7 @@ msgstr "CPU限制"
 msgid "Use cpulimit to restrict app's cpu usage."
 msgstr "利用cpulimit限制应用程序的CPU使用率"
 
-msgid "Usage restrictions"
+msgid "enable"
 msgstr "使用率限制"
 
 msgid "exename"
