--- a/package/hong/luci-app-clash/po/zh-cn/clash.po
+++ b/package/hong/luci-app-clash/po/zh-cn/clash.po
@@ -586,3 +586,20 @@ msgstr "删除局域网DNS"
 msgid "Remove Lan custom DNS Servers when client is disabled"
 msgstr "禁用客户端时删除局域网自定义DNS服务器"
 
+msgid "Enable ipv6"
+msgstr "启用ipv6"
+
+msgid "Allow ipv6 traffic through clash"
+msgstr "允许ipv6流量通过clash"
+
+msgid "NB: Upload GEOIP Database file Country.mmdb"
+msgstr "注意：上传GEOIP数据库文件Country.mmdb"
+
+msgid "Download logs"
+msgstr "下载日志"
+
+msgid "Enable Create"
+msgstr "启用创建"
+
+msgid "Enable to create configuration"
+msgstr "启用以创建配置"
