--- a/package/hong/lienol/luci-app-passwall/po/zh-cn/passwall.po
+++ b/package/hong/lienol/luci-app-passwall/po/zh-cn/passwall.po
@@ -169,8 +169,8 @@ msgstr "ChinaDNS-NG的上游服务器"
 msgid "Domestic DNS server in advanced Settings is used as domestic DNS by default"
 msgstr "默认使用高级设置里的国内DNS服务器作为国内DNS"
 
-msgid "example: 127.0.0.1#5335<br>Need at least one,Other DNS services can be used as upstream, such as dns2socks."
-msgstr "例：127.0.0.1#5335<br>需要至少一个服务器，其他DNS服务可以作为上游使用，比如：dns2socks。"
+msgid "example: 127.0.0.1#5335<br />Need at least one,Other DNS services can be used as upstream, such as dns2socks."
+msgstr "例：127.0.0.1#5335<br />需要至少一个服务器，其他DNS服务可以作为上游使用，比如：dns2socks。"
 
 msgid "custom"
 msgstr "自定义"
@@ -244,8 +244,8 @@ msgstr "你选择的节点是："
 msgid "Timeout"
 msgstr "超时"
 
-msgid "The server client can also use this rule to scientifically surf the Internet"
-msgstr "本机服务器的客户端也可以使用这个代理模式上网"
+msgid "The server client can also use this rule to scientifically surf the Internet, Global and continental whitelist are not recommended for non-special cases!"
+msgstr "本机服务器的客户端也可以使用这个代理模式上网，非特殊情况不推荐使用全局和大陆白名单！"
 
 msgid "Node Remarks"
 msgstr "节点备注"
@@ -304,6 +304,9 @@ msgstr "选中后保存应用后即自动Ping节点"
 msgid "Concise display nodes"
 msgstr "简洁显示节点"
 
+msgid "Support for more than 10,000 ping nodes and luci does not crash and not slow."
+msgstr "支持超过10000个节点，而LuCI却不会卡死，更不会崩溃。"
+
 msgid "Apply"
 msgstr "应用"
 
@@ -337,8 +340,8 @@ msgstr "国内DNS指定解析出口"
 msgid "Node Export Of Multi WAN"
 msgstr "节点指定出口"
 
-msgid "Only support Multi Wan. If no effect, please go to mwan3 to set."
-msgstr "只有多线接入才有效，如果设置后还是无效，请到mwan3设置。"
+msgid "Only support Multi Wan."
+msgstr "只有多线接入才有效。"
 
 msgid "Not Specify"
 msgstr "不指定"
@@ -736,8 +739,8 @@ msgstr "域名"
 msgid "Whether unsafe connections are allowed. When checked, V2Ray does not check the validity of the TLS certificate provided by the remote host."
 msgstr "是否允许不安全连接。当勾选时，V2Ray 不会检查远端主机所提供的 TLS 证书的有效性。"
 
-msgid "<br>none: default, no masquerade, data sent is packets with no characteristics.<br>srtp: disguised as an SRTP packet, it will be recognized as video call data (such as FaceTime).<br>utp: packets disguised as uTP will be recognized as bittorrent downloaded data.<br>wechat-video: packets disguised as WeChat video calls.<br>dtls: disguised as DTLS 1.2 packet.<br>wireguard: disguised as a WireGuard packet. (not really WireGuard protocol)"
-msgstr "<br>none：默认值，不进行伪装，发送的数据是没有特征的数据包。<br>srtp：伪装成 SRTP 数据包，会被识别为视频通话数据（如 FaceTime）。<br>utp：伪装成 uTP 数据包，会被识别为 BT 下载数据。<br>wechat-video：伪装成微信视频通话的数据包。<br>dtls：伪装成 DTLS 1.2 数据包。<br>wireguard：伪装成 WireGuard 数据包。(并不是真正的 WireGuard 协议)"
+msgid "<br />none: default, no masquerade, data sent is packets with no characteristics.<br />srtp: disguised as an SRTP packet, it will be recognized as video call data (such as FaceTime).<br />utp: packets disguised as uTP will be recognized as bittorrent downloaded data.<br />wechat-video: packets disguised as WeChat video calls.<br />dtls: disguised as DTLS 1.2 packet.<br />wireguard: disguised as a WireGuard packet. (not really WireGuard protocol)"
+msgstr "<br />none：默认值，不进行伪装，发送的数据是没有特征的数据包。<br />srtp：伪装成 SRTP 数据包，会被识别为视频通话数据（如 FaceTime）。<br />utp：伪装成 uTP 数据包，会被识别为 BT 下载数据。<br />wechat-video：伪装成微信视频通话的数据包。<br />dtls：伪装成 DTLS 1.2 数据包。<br />wireguard：伪装成 WireGuard 数据包。(并不是真正的 WireGuard 协议)"
 
 msgid "A legal file path. This file must not exist before running V2Ray."
 msgstr "一个合法的文件路径。在运行 V2Ray 之前，这个文件必须不存在。"
