--- a/package/hong/luci-app-diskman/po/zh-cn/diskman.po
+++ b/package/hong/luci-app-diskman/po/zh-cn/diskman.po
@@ -43,8 +43,107 @@ msgstr "序列号"
 msgid "Temp"
 msgstr "温度"
 
-msgid ""
-msgstr ""
+msgid "S.M.A.R.T Info"
+msgstr "磁盘监控"
+
+msgid "This widget allow you to monitor your storage devices which support S.M.A.R.T technology."
+msgstr "该工具帮助您通过S.M.A.R.T技术来监控您硬盘的健康状况."
+
+msgid "S.M.A.R.T Report Settings"
+msgstr "S.M.A.R.T 报告设置"
+
+msgid "Enabled"
+msgstr "启用"
+
+msgid "Check Interval"
+msgstr "检查间隔"
+
+msgid "Unit"
+msgstr "单位"
+
+msgid "Minutes"
+msgstr "分"
+
+msgid "Hours"
+msgstr "小时"
+
+msgid "Days"
+msgstr "天"
+
+msgid "Weeks"
+msgstr "周"
+
+msgid "Log to file"
+msgstr "记录到文件"
+
+msgid "at"
+msgstr "位于"
+
+msgid "Touch a warning file when disk fail"
+msgstr "故障时生成示警文件"
+
+msgid "Devices to monitor"
+msgstr "监控这些设备"
+
+msgid "S.M.A.R.T Status"
+msgstr "S.M.A.R.T 状况"
+
+msgid "Device"
+msgstr "设备"
+
+msgid "Model"
+msgstr "型号"
+
+msgid "Size"
+msgstr "大小"
+
+msgid "Status"
+msgstr "状况"
+
+msgid "Collecting data..."
+msgstr "正在收集数据"
+
+msgid "Detail"
+msgstr "详细"
+
+msgid "Show"
+msgstr "查看"
+
+msgid "Global"
+msgstr "全局"
+
+msgid "No Attrbute to display."
+msgstr "没有可显示的属性"
+
+msgid "S.M.A.R.T Attrbutes"
+msgstr "S.M.A.R.T 属性"
+
+msgid "ID"
+msgstr "ID"
+
+msgid "Attrbute"
+msgstr "属性名称"
+
+msgid "Flag"
+msgstr "标记"
+
+msgid "Value"
+msgstr "值"
+
+msgid "Worst"
+msgstr "最坏"
+
+msgid "Thresh"
+msgstr "临界值"
+
+msgid "Type"
+msgstr "类型"
+
+msgid "Updated"
+msgstr "更新"
+
+msgid "Raw"
+msgstr "原始值"
 
 msgid ""
 msgstr ""
