--- a/package/hong/lienol/luci-app-passwall/po/zh-cn/passwall.po
+++ b/package/hong/lienol/luci-app-passwall/po/zh-cn/passwall.po
@@ -163,14 +163,17 @@ msgstr "使用TCP节点解析DNS"
 msgid "If checked, DNS is resolved using the TCP node."
 msgstr "如果勾选，则使用TCP节点解析DNS解决污染。"
 
-msgid "upstreamm DNS Server for ChinaDNS-NG"
-msgstr "ChinaDNS-NG的上游服务器"
+msgid "Upstream china DNS Server for ChinaDNS-NG"
+msgstr "ChinaDNS-NG国内服务器"
 
-msgid "Domestic DNS server in advanced Settings is used as domestic DNS by default"
-msgstr "默认使用高级设置里的国内DNS服务器作为国内DNS"
+msgid "Domestic DNS server in Advanced Settings is used as domestic DNS by default.<br />Example: 127.0.0.1#5335,223.5.5.5#53<br />Only use two at most."
+msgstr "默认使用高级设置里的国内DNS服务器作为国内DNS。<br />例：127.0.0.1#5335,223.5.5.5#53<br />最多使用2个DNS服务器。"
 
-msgid "example: 127.0.0.1#5335<br />Need at least one,Other DNS services can be used as upstream, such as dns2socks."
-msgstr "例：127.0.0.1#5335<br />需要至少一个服务器，其他DNS服务可以作为上游使用，比如：dns2socks。"
+msgid "Upstream trust DNS Server for ChinaDNS-NG"
+msgstr "ChinaDNS-NG可信服务器"
+
+msgid "Example: 127.0.0.1#5353<br />Only use two at most. such as smartdns,dns2socks..."
+msgstr "例：127.0.0.1#5353<br />最多使用2个DNS服务器，例：smartdns，dns2socks等等。"
 
 msgid "custom"
 msgstr "自定义"
@@ -463,8 +466,8 @@ msgstr "负载均衡端口"
 msgid "Load Balancing Setting"
 msgstr "负载均衡设置"
 
-msgid "Add a node, Export Of Multi WAN Only support Multi Wan. If no effect, please go to mwan3 to set. Load specific gravity range 1-256. Multiple primary servers can be load balanced, standby will only be enabled when the primary server is offline!"
-msgstr "添加节点，指定出口功能是为多WAN用户准备的，如果设置后还是无效，请到mwan3设置。负载比重范围1-256。多个主服务器可以负载均衡，备用只有在主服务器离线时才会启用！"
+msgid "Add a node, Export Of Multi WAN Only support Multi Wan. Load specific gravity range 1-256. Multiple primary servers can be load balanced, standby will only be enabled when the primary server is offline!"
+msgstr "添加节点，指定出口功能是为多WAN用户准备的。负载比重范围1-256。多个主服务器可以负载均衡，备用只有在主服务器离线时才会启用！"
 
 msgid "Node Address"
 msgstr "节点地址"
