--- a/package/hong/luci-app-dockerman/po/zh-cn/dockerman.po
+++ b/package/hong/luci-app-dockerman/po/zh-cn/dockerman.po
@@ -1,8 +1,5 @@
-msgid "Docker"
-msgstr "容器管理"
-
 msgid "Containers"
-msgstr "货柜"
+msgstr "容器"
 
 msgid "Images"
 msgstr "镜像"
@@ -11,13 +8,13 @@ msgid "Networks"
 msgstr "网络"
 
 msgid "Volumes"
-msgstr "卷数"
+msgstr "存储卷"
 
 msgid "Events"
 msgstr "活动"
 
 msgid "Docker Contaienr"
-msgstr "Docker容器"
+msgstr "Docker 容器"
 
 msgid "Start"
 msgstr "启动"
@@ -29,10 +26,10 @@ msgid "Stop"
 msgstr "关闭"
 
 msgid "Upgrade"
-msgstr "升级"
+msgstr "升级容器"
 
 msgid "Duplicate"
-msgstr "重复"
+msgstr "复制容器"
 
 msgid "Remove"
 msgstr "移除"
@@ -47,10 +44,10 @@ msgid "Status"
 msgstr "状态"
 
 msgid "Created"
-msgstr "已建立"
+msgstr "已创建"
 
 msgid "Start Time"
-msgstr "开始时间"
+msgstr "启动时间"
 
 msgid "Healthy"
 msgstr "健康"
@@ -65,19 +62,19 @@ msgid "Device"
 msgstr "设备"
 
 msgid "Mount/Volume"
-msgstr "安装/体积"
+msgstr "挂载/存储卷"
 
 msgid "Command"
-msgstr "命令"
+msgstr "启动命令"
 
 msgid "Setting"
 msgstr "设置"
 
 msgid "Driver"
-msgstr "司机"
+msgstr "驱动"
 
 msgid "Env"
-msgstr "环保"
+msgstr "环境变量"
 
 msgid "Ports"
 msgstr "端口"
@@ -98,43 +95,43 @@ msgid "Info"
 msgstr "信息"
 
 msgid "CPUs"
-msgstr "CPU总"
+msgstr "CPU数量"
 
 msgid "Number of CPUs. Number is a fractional number. 0.000 means no limit."
-msgstr "CPU数量。数字是小数。 0.000表示没有限制。"
+msgstr "CPU数量，数字是小数，0.000表示没有限制。"
 
 msgid "CPU Shares Weight"
-msgstr "CPU份额重量"
+msgstr "CPU份额权重"
 
 msgid ""
-"CPU shares (relative weight, if 0 is set, the system will ignore the value and use the default of 1024."
+"CPU shares relative weight, if 0 is set, the system will ignore the value and use the default of 1024."
 msgstr ""
-"CPU份额（相对权重，如果设置为0，则系统将忽略该值，并使用默认值1024。"
+"CPU份额相对权重，如果设置为0，则系统将忽略该值，并使用默认值1024。"
 
 msgid "Memory"
-msgstr "记忆"
+msgstr "内存"
 
 msgid ""
 "Memory limit (format: <number>[<unit>]). Number is a positive integer. Unit can be one of b, k, m, or g. Minimum is 4M."
 msgstr ""
-"内存限制 (format: <number>[<unit>]). 数字是一个正整数。单位可以是b，k，m或g之一。最小为4M。"
+"内存限制 (格式: <容量>[<单位>]). 数字是一个正整数。单位可以是b，k，m或g之一。最小为4M。"
 
 msgid "Block IO Weight"
-msgstr "块IO权重"
+msgstr "IO 权重"
 
 msgid ""
 "Block IO weight (relative weight) accepts a weight value between 10 and 1000."
 msgstr ""
-"块IO权重（相对权重）接受10到1000之间的权重值。"
+"IO 权重（相对权重）接受10到1000之间的权重值。"
 
 msgid "Container Logs"
-msgstr "集装箱日志"
+msgstr "容器日志"
 
 msgid "RepoTags"
-msgstr "回购标签"
+msgstr "标签"
 
 msgid "Size"
-msgstr ""
+msgstr "大小"
 
 msgid "Force Remove"
 msgstr "强制移除"
@@ -150,19 +147,19 @@ msgid "New"
 msgstr "新建"
 
 msgid "New Container"
-msgstr "新货柜"
+msgstr "新容器"
 
 msgid "Container Name"
-msgstr "货柜名称"
+msgstr "容器名称"
 
 msgid "Interactive (-i)"
 msgstr "互动式 (-i)"
 
 msgid "Always pull image first"
-msgstr "始终先拉镜像"
+msgstr "始终先拉取镜像"
 
 msgid "Privileged"
-msgstr "特权"
+msgstr "特权模式"
 
 msgid "IPv4 Address"
 msgstr "IPv4 地址"
@@ -177,13 +174,13 @@ msgid "Bind Mount"
 msgstr "绑定坐骑"
 
 msgid "Exposed Ports"
-msgstr "裸露端口"
+msgstr "暴露端口"
 
 msgid "Run command"
 msgstr "运行命令"
 
 msgid "Advance"
-msgstr "预先"
+msgstr "高级"
 
 msgid "Mount tmpfs filesystems"
 msgstr "挂载tmpfs文件系统"
@@ -195,7 +192,7 @@ msgid "Network Name"
 msgstr "网络名称"
 
 msgid "Parent Interface"
-msgstr "上级接口"
+msgstr "父接口"
 
 msgid "Macvlan Mode"
 msgstr "Macvlan模式"
@@ -203,17 +200,11 @@ msgstr "Macvlan模式"
 msgid "Ipvlan Mode"
 msgstr "Ipvlan模式"
 
-msgid "Ingress"
-msgstr "入口"
-
 msgid "Ingress network is the network which provides the routing-mesh in swarm mode."
-msgstr "入口网络是在群集模式下提供路由网的网络。"
+msgstr "Ingress网络是在群集模式下提供路由网的网络。"
 
 msgid "Options"
-msgstr "选件"
-
-msgid "Internal"
-msgstr "内部"
+msgstr "选项"
 
 msgid "Restrict external access to the network"
 msgstr "限制外部访问网络"
@@ -246,25 +237,25 @@ msgid "Docker Root Dir"
 msgstr "Docker根目录"
 
 msgid "Index Server Address"
-msgstr "索引服务器地址"
+msgstr "默认服务器地址"
 
 msgid "Socket Path"
 msgstr "Socket路径"
 
 msgid "Action Status Tempfile Path"
-msgstr "动作状态临时文件路径"
+msgstr "docker 动作状态的临时文件路径"
 
 msgid "Where you want to save the docker status file"
-msgstr "您要在其中保存docker status文件的位置"
+msgstr "保存docker status文件的位置"
 
 msgid "Enable Debug"
 msgstr "启用调试"
 
 msgid "For debug, It shows all docker API actions of luci-app-docker in Debug Tempfile Path"
-msgstr "对于调试，它在调试临时文件路径中显示luci-app-docker的所有docker API操作"
+msgstr "用于调试，它在调试临时文件路径中显示luci-app-docker的所有docker API操作"
 
 msgid "Debug Tempfile Path"
 msgstr "调试临时文件路径"
 
 msgid "Where you want to save the debug tempfile"
-msgstr "您要在其中保存调试临时文件的位置"
+msgstr "保存调试临时文件的位置"
