--- a/package/hong/luci-app-dockerman/po/zh-cn/dockerman.po
+++ b/package/hong/luci-app-dockerman/po/zh-cn/dockerman.po
@@ -259,3 +259,78 @@ msgstr "调试临时文件路径"
 
 msgid "Where you want to save the debug tempfile"
 msgstr "保存调试临时文件的位置"
+
+msgid "Pull Image"
+msgstr "拉取镜像"
+
+msgid "Pull"
+msgstr "添加镜像"
+
+msgid "Docker Events"
+msgstr "Docker日志"
+
+msgid "Plese input <docker create/run> command line:"
+msgstr "请输入<docker create/run>命令行："
+
+msgid "Canceled"
+msgstr "取消"
+
+msgid "command line"
+msgstr "命令行"
+
+msgid "Resolv CLI"
+msgstr "Resolv客户端"
+
+msgid "No"
+msgstr "不用"
+
+msgid "Unless stopped"
+msgstr "除非停止"
+
+msgid "Always"
+msgstr "总是"
+
+msgid "On failure"
+msgstr "失败时"
+
+msgid "Restart policy"
+msgstr "重新启动策略"
+
+msgid " CPU shares (relative weight, if 0 is set, the system will ignore the value and use the default of 1024."
+msgstr "CPU份额（相对权重，如果设置为0，则系统将忽略该值，并使用默认值1024。"
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
+
+msgid ""
+msgstr ""
